<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/placeQueryLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/placeInstructionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeInstruction"
        app:layout_constraintBottom_toTopOf="@+id/placeSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Spinner
        android:id="@+id/placeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/placeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeInstructionText"
        />

    <EditText
        android:id="@+id/placeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/placeSpinner"
        android:autofillHints="city"
        android:ems="10"
        android:hint="@string/enter_a_city"
        android:inputType="textAutoComplete"
        app:layout_constraintBottom_toTopOf="@+id/placeOkButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeSpinner"
        >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/placeCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/cancelPlaceSelection"
        app:layout_constraintBaseline_toBaselineOf="@id/placeOkButton"
        app:layout_constraintEnd_toStartOf="@id/placeOkButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/placeOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/placeEditText"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/okay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/placeCancelButton"
        app:layout_constraintTop_toBottomOf="@+id/placeEditText"
        />

</androidx.constraintlayout.widget.ConstraintLayout>