<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium"
    app:cardCornerRadius="@dimen/corner_large"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        >

        <ImageView
            android:id="@+id/businessImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_large_xxx"
            android:contentDescription="@string/businessImage"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/businessName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            />

        <TextView
            android:id="@+id/businessName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_label_large"
            app:layout_constraintBottom_toTopOf="@+id/businessRating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessImage"
            tools:text="@tools:sample/lorem"
            />

        <ImageView
            android:id="@+id/businessRating"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_small_x"
            android:contentDescription="@string/ratingImage"
            app:layout_constraintBottom_toTopOf="@+id/businessReviewLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessName"
            tools:src="@drawable/stars_regular_5"
            />

        <TextView
            android:id="@+id/businessReviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_rated_review_c"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_label_small"
            app:layout_constraintBottom_toTopOf="@+id/businessReview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessRating"
            />

        <TextView
            android:id="@+id/businessReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessReviewLabel"
            tools:text="@tools:sample/lorem/random"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
